@@ -1,0 +1,9 @@
+Title: Business intelligence: Multihost aggregations are no longer broken after a core restart
+Level: 1
+Component: bi
+Compatible: compat
+Version: 1.4.0i4
+Date: 1483972494
+Class: fix
+
+
